CI 2 lines from work before pull

--- a/quadfirst.tex
+++ b/quadfirst.tex
@@ -280,9 +280,8 @@ Figure~\ref{fig:eric}, I've labeled the points
 \end{align*}
 where $z_1$ is the wedge apex and $z_2$/$z_3$ is the intersection of
 the upper/lower edge of the wedge with the boundary
-respectively\footnote{Since the diagonal edge of each wedge is along a
-  line through both $(0,g_0)$ and $(h_1,g_1)$, $z_2$ depends on $g_0$
-  alone.}.
+respectively\footnote{Note that since the diagonal edge of each wedge
+  goes through $(-6,g_0)$, $z_2$ depends on $g_0$ but not $h_0$.}.
 
 Results from calculating moments of the images with the python sympy
 package are too complex to be enlightening.  The parts that fit on
