Plot F(z_0) for points on center, h=0.

--- a/quadfirst.tex
+++ b/quadfirst.tex
@@ -325,7 +325,8 @@ same distance, namely 2.5.
   \centering
     \resizebox{\columnwidth}{!}{\includegraphics{f_n.pdf}}  
     \caption{Illustration of the action of $F^n$ with noninteger
-      values of $n$.}
+      values of $n$ and the action of $F$ on a set of points on the
+      center, $h=0$.}
   \label{fig:f_n}
 \end{figure}
 
